testsuite/tests/typecheck/should_fail/T7019a.stderr

T7019a.hs:11:1: error:
    • Illegal polymorphic type: forall b. Context (Associated a b)
      A constraint must be a monotype
    • In the context: forall b. Context (Associated a b)
      While checking the super-classes of class ‘Class’
      In the class declaration for ‘Class’
